--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "vue": "^2.5.21",
     "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0"
+    "vue-property-decorator": "^7.0.0",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
