--- a/website/package.json
+++ b/website/package.json
@@ -15,21 +15,20 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0",
-    "vuex-class": "^0.3.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-plugin-typescript": "^3.3.0",
+    "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.3.0",
-    "@vue/eslint-config-typescript": "^3.2.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "typescript": "~3.1.1",
+    "typescript": "~3.2.2",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
@@ -43,7 +42,7 @@
       "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "typescript-eslint-parser"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {
       "vue/attribute-hyphenation": "error",
