--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "pili-rtc-web": "^2.1.0-patch.0",
-    "vue": "^2.5.21",
+    "vue": "^2.6.3",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.2",
@@ -28,8 +28,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "typescript": "~3.2.2",
-    "vue-template-compiler": "^2.5.21"
+    "typescript": "^3.3.3",
+    "vue-template-compiler": "^2.6.3"
   },
   "eslintConfig": {
     "root": true,
