--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "@types/fscreen": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "detect-browser": "^4.1.0",
     "element-ui": "^2.5.4",
     "fscreen": "^1.0.2",
     "pili-rtc-web": "^2.1.0-patch.0",
@@ -21,6 +22,7 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "@types/node": "^10.12.24",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
@@ -31,7 +33,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.3.3",
+    "typescript": "~3.2.1",
     "vue-template-compiler": "^2.6.3"
   },
   "eslintConfig": {
