Add lodash dependencie

--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "detect-browser": "^4.1.0",
     "element-ui": "^2.5.4",
     "fscreen": "^1.0.2",
+    "lodash": "^4.17.11",
     "pili-rtc-web": "^2.1.0-patch.0",
     "vue": "^2.6.3",
     "vue-class-component": "^6.0.0",
