--- a/website/package.json
+++ b/website/package.json
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/fscreen": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "clipboard": "^2.0.4",
     "detect-browser": "^4.1.0",
     "element-ui": "^2.5.4",
     "fscreen": "^1.0.2",
@@ -23,6 +23,8 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "@types/clipboard": "^2.0.1",
+    "@types/fscreen": "^1.0.1",
     "@types/node": "^10.12.24",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
