Using whiteboard lasted version

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -17,6 +17,9 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "*" : [
+        "node_modules/white-web-sdk/types/*"
       ]
     },
     "lib": [
