--- a/website/package.json
+++ b/website/package.json
@@ -20,7 +20,8 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "white-web-sdk": "^1.3.8"
   },
   "devDependencies": {
     "@types/clipboard": "^2.0.1",
