--- a/website/package.json
+++ b/website/package.json
@@ -21,7 +21,7 @@
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
-    "white-web-sdk": "^1.3.8"
+    "white-web-sdk": "2.0.0-beta.4"
   },
   "devDependencies": {
     "@types/clipboard": "^2.0.1",
