--- a/Server/src/room.cafe/example_config.yml
+++ b/Server/src/room.cafe/example_config.yml
@@ -16,6 +16,8 @@ qiniu:
   secret_key: secret_key
   rtn_appid:
   rtn_addr: https://rtc.qiniuapi.com
+  bucket:
+  domain:
 herewhite:
   mini_token:
   host: https://cloudcapiv3.herewhite.com
