--- a/Server/src/room.cafe/example_config.yml
+++ b/Server/src/room.cafe/example_config.yml
@@ -11,6 +11,11 @@ app:
   port: 8080
   secure: false
   secret: secret
+  cors:
+    origins:
+      - http://localhost:3000
+      - http://dev.room.cafe:3000
+      - https://dev.room.cafe:3000
 qiniu:
   access_key: access_key
   secret_key: secret_key
@@ -20,7 +25,7 @@ qiniu:
   domain:
 herewhite:
   mini_token:
-  host: https://cloudcapiv3.herewhite.com
+  host: https://cloudcapiv4.herewhite.com
 oauth:
   google:
     client_id:
@@ -33,4 +38,3 @@ oauth:
     client_secret:
     auth_url:
     token_url:
-
