--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.14",
     "clipboard": "^2.0.4",
