--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "uuid": "^3.3.2",
     "vue": "^2.6.3",
     "vue-class-component": "^6.0.0",
+    "vue-i18n": "^8.9.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
