update supervisor, support log rotate

--- a/supervisord/supervisor.conf
+++ b/supervisord/supervisor.conf
@@ -1,9 +1,7 @@
 [program:room.cafe]
-command=/home/ubuntu/room.cafe/package/room.cafe
-directory=/home/ubuntu/room.cafe/package
+command=python /etc/supervisor/run.py -p /home/ubuntu/room.cafe/package/run/room.cafe.pid -r /home/ubuntu/room.cafe/package/run/room.cafe.log -c '/home/ubuntu/room.cafe/package/room.cafe'
+directory=/home/ubuntu/room.cafe/package/
 priority=999
-stderr_logfile=/home/ubuntu/room.cafe/package/run/log
-stdout_logfile=/home/ubuntu/room.cafe/package/run/log
 autostart=true
 startsecs=1
 autorestart=true
