--- a/website/package.json
+++ b/website/package.json
@@ -10,38 +10,38 @@
   "dependencies": {
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.19",
+    "bootstrap-vue": "^2.0.0-rc.14",
     "clipboard": "^2.0.4",
     "detect-browser": "^4.1.0",
-    "element-ui": "^2.8.2",
+    "element-ui": "^2.5.4",
     "fscreen": "^1.0.2",
     "lodash": "^4.17.11",
-    "pili-rtc-web": "^2.2.0",
+    "pili-rtc-web": "^2.1.0-patch.0",
     "uuid": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
+    "vue": "^2.6.3",
+    "vue-class-component": "^6.0.0",
     "vue-i18n": "^8.9.0",
-    "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.6",
+    "vue-property-decorator": "^7.0.0",
+    "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
-    "white-web-sdk": "2.0.0-beta.7"
+    "white-web-sdk": "2.0.0-beta.4"
   },
   "devDependencies": {
     "@types/clipboard": "^2.0.1",
     "@types/fscreen": "^1.0.1",
     "@types/node": "^10.12.24",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-plugin-typescript": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-typescript": "^3.4.0",
+    "@vue/cli-service": "^3.3.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "node-sass": "^4.12.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "typescript": "~3.2.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.3"
   },
   "eslintConfig": {
     "root": true,
