--- a/website/package.json
+++ b/website/package.json
@@ -24,7 +24,7 @@
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.0",
-    "white-web-sdk": "^2.2.2"
+    "white-web-sdk": "2.0.0-beta.4"
   },
   "devDependencies": {
     "@types/clipboard": "^2.0.1",
