--- a/server/src/room.cafe/example_config.yml
+++ b/server/src/room.cafe/example_config.yml
@@ -23,6 +23,10 @@ qiniu:
   rtn_addr: https://rtc.qiniuapi.com
   bucket:
   domain:
+agora:
+  app_id: 3fc8dabb7c7d49ecab5ce8a3ff3a0076
+  app_certificate: f5702c4dc0b14a0798047523bbefa2b2
+
 herewhite:
   mini_token:
   host: https://cloudcapiv4.herewhite.com
