--- a/website-v2/package.json
+++ b/website-v2/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://room.cafe",
   "dependencies": {
-    "antd": "^4.0.1",
+    "antd": "^4.0.3",
     "axios": "^0.19.2",
+    "i18next": "^19.3.3",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-i18next": "^11.3.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
