--- a/website-v2/package.json
+++ b/website-v2/package.json
@@ -7,6 +7,7 @@
     "agora-rtc-sdk-ng": "^0.1.4",
     "antd": "^4.0.4",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "fscreen": "^1.0.2",
     "i18next": "^19.3.3",
     "mobx-react-lite": "^1.5.2",
@@ -24,6 +25,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/fscreen": "^1.0.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
