--- a/website-v2/package.json
+++ b/website-v2/package.json
@@ -13,6 +13,7 @@
     "mobx-react-lite": "^1.5.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.0",
     "react-i18next": "^11.3.4",
     "react-router-config": "^5.1.1",
@@ -31,6 +32,7 @@
     "@types/node": "^12.0.0",
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.0",
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.3",
