--- a/website-v2/package.json
+++ b/website-v2/package.json
@@ -19,8 +19,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "white-react-sdk": "^2.7.1",
-    "wolfy87-eventemitter": "^5.2.9"
+    "white-react-sdk": "^2.7.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
