--- a/website-v2/package.json
+++ b/website-v2/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@netless/cursor-adapter": "^0.0.5",
     "agora-rtc-sdk-ng": "^0.1.4",
+    "agora-rtm-sdk": "^1.2.2",
     "antd": "^4.0.4",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
