Update api path

--- a/website/.env.development
+++ b/website/.env.development
@@ -4,4 +4,4 @@ PORT=3000
 HTTPS=true
 SSL_CRT_FILE=../certificate/dev.room.cafe.crt
 SSL_KEY_FILE=../certificate/dev.room.cafe.key
-REACT_APP_API_BASE_URL=https://dev.room.cafe:8080
+REACT_APP_API_BASE_URL=https://dev.room.cafe:8080/action
