--- a/website/package.json
+++ b/website/package.json
@@ -38,13 +38,15 @@
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.3",
     "babel-plugin-import": "^1.13.0",
+    "compression-webpack-plugin": "^3.1.0",
     "customize-cra": "^0.9.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "react-app-rewired": "^2.1.5",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "webpack-build-notifier": "^2.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
